[package]
name = "bathroom"
version = "0.1.0"
edition = "2024"
authors = ["Oleksandr Prokhorenko <warbles.lieu_04@icloud.com>"]
description = "Implementation of the Bathroom Model hash table algorithm"
repository = "https://github.com/minikin/bathroom"
readme = "README.md"
keywords = ["hash", "table", "bathroom-model", "algorithm", "data-structure"]
categories = ["algorithms", "data-structures"]
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.9.0"

[dev-dependencies]
criterion = "0.5.1"
