[package]
name = "bathroom"
version = "0.1.0"
edition = "2024"
authors = ["Oleksandr Prokhorenko <warbles.lieu_04@icloud.com>"]
description = "Implementation of the Bathroom Model hash table algorithm"
repository = "https://github.com/minikin/bathroom"
readme = "README.md"
keywords = ["hash", "table", "bathroom-model", "algorithm", "data-structure"]
categories = ["algorithms", "data-structures"]
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.9.0"

[dev-dependencies]
criterion = "0.5.1"

[lints.rust]
missing-debug-implementations = "warn"
warnings = "deny"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
arithmetic_side_effects = "deny"
exit = "deny"
expect_used = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_on_vec_items = "deny"
match_wild_err_arm = "deny"
missing_docs_in_private_items = "deny"
missing_panics_doc = "deny"
option-if-let-else = "warn"
panic = "deny"
redundant-clone = "warn"
string_slice = "deny"
todo = "deny"
unchecked_duration_subtraction = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"
use-self = "deny"
